--- a/org.eclipse.scout.sdk/pom.xml
+++ b/org.eclipse.scout.sdk/pom.xml
@@ -20,7 +20,7 @@
 
   <groupId>org.eclipse.scout.sdk</groupId>
   <artifactId>org.eclipse.scout.sdk</artifactId>
-  <version>13.0.0-SNAPSHOT</version>
+  <version>13.0.16</version>
   <packaging>pom</packaging>
   <name>Eclipse Scout SDK</name>
   <description>Eclipse Scout SDK</description>
@@ -55,7 +55,7 @@
 
   <properties>
     <scout.osgi.version>13.0.0</scout.osgi.version>
-    <org.eclipse.scout.rt_version>23.2-SNAPSHOT</org.eclipse.scout.rt_version>
+    <org.eclipse.scout.rt_version>23.1.16</org.eclipse.scout.rt_version>
 
     <jdk.source.version>17</jdk.source.version>
     <jdk.min.version>${jdk.source.version}</jdk.min.version>
@@ -199,92 +199,92 @@
       <dependency>
         <groupId>org.eclipse.scout.sdk</groupId>
         <artifactId>org.eclipse.scout.sdk.core</artifactId>
-        <version>13.0.0-SNAPSHOT</version>
+        <version>13.0.16</version>
       </dependency>
       <dependency>
         <groupId>org.eclipse.scout.sdk</groupId>
         <artifactId>org.eclipse.scout.sdk.core.test</artifactId>
-        <version>13.0.0-SNAPSHOT</version>
+        <version>13.0.16</version>
       </dependency>
 
       <dependency>
         <groupId>org.eclipse.scout.sdk</groupId>
         <artifactId>org.eclipse.scout.sdk.core.java</artifactId>
-        <version>13.0.0-SNAPSHOT</version>
+        <version>13.0.16</version>
       </dependency>
       <dependency>
         <groupId>org.eclipse.scout.sdk</groupId>
         <artifactId>org.eclipse.scout.sdk.core.java.ecj</artifactId>
-        <version>13.0.0-SNAPSHOT</version>
+        <version>13.0.16</version>
       </dependency>
       <dependency>
         <groupId>org.eclipse.scout.sdk</groupId>
         <artifactId>org.eclipse.scout.sdk.core.java.test</artifactId>
-        <version>13.0.0-SNAPSHOT</version>
+        <version>13.0.16</version>
       </dependency>
 
       <dependency>
         <groupId>org.eclipse.scout.sdk</groupId>
         <artifactId>org.eclipse.scout.sdk.core.typescript</artifactId>
-        <version>13.0.0-SNAPSHOT</version>
+        <version>13.0.16</version>
       </dependency>
       <dependency>
         <groupId>org.eclipse.scout.sdk</groupId>
         <artifactId>org.eclipse.scout.sdk.core.typescript.test</artifactId>
-        <version>13.0.0-SNAPSHOT</version>
+        <version>13.0.16</version>
       </dependency>
 
       <dependency>
         <groupId>org.eclipse.scout.sdk</groupId>
         <artifactId>org.eclipse.scout.sdk.core.s</artifactId>
-        <version>13.0.0-SNAPSHOT</version>
+        <version>13.0.16</version>
       </dependency>
       <dependency>
         <groupId>org.eclipse.scout.sdk</groupId>
         <artifactId>org.eclipse.scout.sdk.core.s.test</artifactId>
-        <version>13.0.0-SNAPSHOT</version>
+        <version>13.0.16</version>
       </dependency>
 
       <dependency>
         <groupId>org.eclipse.scout.sdk.s2e</groupId>
         <artifactId>org.eclipse.scout.sdk.s2e</artifactId>
-        <version>13.0.0-SNAPSHOT</version>
+        <version>13.0.16</version>
       </dependency>
       <dependency>
         <groupId>org.eclipse.scout.sdk.s2e</groupId>
         <artifactId>org.eclipse.scout.sdk.s2e</artifactId>
-        <version>13.0.0-SNAPSHOT</version>
+        <version>13.0.16</version>
         <classifier>sources</classifier>
       </dependency>
 
       <dependency>
         <groupId>org.eclipse.scout.sdk.s2e</groupId>
         <artifactId>org.eclipse.scout.sdk.s2e.doc</artifactId>
-        <version>13.0.0-SNAPSHOT</version>
+        <version>13.0.16</version>
       </dependency>
       <dependency>
         <groupId>org.eclipse.scout.sdk.s2e</groupId>
         <artifactId>org.eclipse.scout.sdk.s2e.doc</artifactId>
-        <version>13.0.0-SNAPSHOT</version>
+        <version>13.0.16</version>
         <classifier>sources</classifier>
       </dependency>
 
       <dependency>
         <groupId>org.eclipse.scout.sdk.s2e</groupId>
         <artifactId>org.eclipse.scout.sdk.s2e.ui</artifactId>
-        <version>13.0.0-SNAPSHOT</version>
+        <version>13.0.16</version>
       </dependency>
       <dependency>
         <groupId>org.eclipse.scout.sdk.s2e</groupId>
         <artifactId>org.eclipse.scout.sdk.s2e.ui</artifactId>
-        <version>13.0.0-SNAPSHOT</version>
+        <version>13.0.16</version>
         <classifier>sources</classifier>
       </dependency>
 
       <dependency>
         <groupId>org.eclipse.scout.sdk.s2e</groupId>
         <artifactId>org.eclipse.scout.sdk.s2e.test</artifactId>
-        <version>13.0.0-SNAPSHOT</version>
+        <version>13.0.16</version>
       </dependency>
 
       <!-- Build Dependencies -->
