--- a/updatesite-maven-plugin/pom.xml
+++ b/updatesite-maven-plugin/pom.xml
@@ -20,7 +20,7 @@
 
   <groupId>org.eclipse.scout.sdk</groupId>
   <artifactId>updatesite-maven-plugin</artifactId>
-  <version>13.0.0-SNAPSHOT</version>
+  <version>13.0.16</version>
   <packaging>maven-plugin</packaging>
   <name>${project.groupId}:${project.artifactId}</name>
 
